[gd_scene load_steps=9 format=2]

[ext_resource path="res://default_assets/theme/Galaktika.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/ui/Settings_Menu.gd" type="Script" id=2]
[ext_resource path="res://scripts/ui/Main_Menu.gd" type="Script" id=3]
[ext_resource path="res://default_assets/theme/theme_default.tres" type="Theme" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://default_assets/theme/galactika.tres" type="DynamicFont" id=6]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 1 )

[sub_resource type="ButtonGroup" id=2]

[node name="Main_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1920.0
margin_right = -1920.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings_Menu" type="Control" parent="MenuContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="MenuContainer/Settings_Menu"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 0.2
margin_left = -184.0
margin_top = 29.7279
margin_right = -32.0
margin_bottom = -34.2721
custom_fonts/font = SubResource( 1 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SectionTitleLabel" type="Label" parent="MenuContainer/Settings_Menu"]
anchor_left = 0.25
anchor_right = 0.75
anchor_bottom = 0.2
custom_fonts/font = SubResource( 1 )
text = "SETTINGS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MenuContainer/Settings_Menu"]
anchor_left = 0.3
anchor_top = 0.35
anchor_right = 0.7
anchor_bottom = 0.75
margin_bottom = -96.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Control" parent="MenuContainer/Settings_Menu/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="FullscreenButton" type="CheckButton" parent="MenuContainer/Settings_Menu/Panel/Settings"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.367
margin_left = -1.52588e-05
margin_top = -1.52588e-05
margin_bottom = -1.52588e-05
custom_fonts/font = ExtResource( 6 )
text = "Fullscreen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="MenuContainer/Settings_Menu/Panel/Settings"]
anchor_left = 0.1
anchor_top = 0.367
anchor_right = 0.9
anchor_bottom = 0.367
margin_left = 4.57764e-05
margin_bottom = 4.0

[node name="VsyncButton" type="CheckButton" parent="MenuContainer/Settings_Menu/Panel/Settings"]
anchor_left = 0.1
anchor_top = 0.367
anchor_right = 0.9
anchor_bottom = 0.634
margin_left = -1.52588e-05
custom_fonts/font = ExtResource( 6 )
text = "Vsync"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="MenuContainer/Settings_Menu/Panel/Settings"]
anchor_left = 0.1
anchor_top = 0.634
anchor_right = 0.9
anchor_bottom = 0.634
margin_left = 4.57764e-05
margin_top = 1.52588e-05
margin_bottom = 4.00002
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RefreshRate" type="HBoxContainer" parent="MenuContainer/Settings_Menu/Panel/Settings"]
anchor_left = 0.1
anchor_top = 0.634
anchor_right = 0.9
anchor_bottom = 0.9
margin_left = -1.52588e-05
margin_top = 1.52588e-05
margin_right = -4.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MenuContainer/Settings_Menu/Panel/Settings/RefreshRate"]
margin_right = 490.0
margin_bottom = 89.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 6 )
text = "Refresh Rate"
valign = 1

[node name="CheckBox" type="CheckBox" parent="MenuContainer/Settings_Menu/Panel/Settings/RefreshRate"]
margin_left = 506.0
margin_right = 550.0
margin_bottom = 89.0
rect_min_size = Vector2( 0, 89 )
group = SubResource( 2 )
text = "30"

[node name="CheckBox2" type="CheckBox" parent="MenuContainer/Settings_Menu/Panel/Settings/RefreshRate"]
margin_left = 566.0
margin_right = 610.0
margin_bottom = 89.0
rect_min_size = Vector2( 0, 89 )
group = SubResource( 2 )
text = "60"

[node name="Options_Menu" type="Control" parent="MenuContainer"]
anchor_left = 1.0
anchor_right = 2.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MenuContainer/Options_Menu"]
anchor_left = 0.2
anchor_right = 0.8
anchor_bottom = 0.2
custom_fonts/font = SubResource( 1 )
text = "JRPG BUILDER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choose_Campaign_Button" type="Button" parent="MenuContainer/Options_Menu"]
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.7
anchor_bottom = 0.45
custom_fonts/font = ExtResource( 6 )
text = "choose campaign"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings_Button" type="Button" parent="MenuContainer/Options_Menu"]
anchor_left = 0.3
anchor_top = 0.5
anchor_right = 0.7
anchor_bottom = 0.65
custom_fonts/font = ExtResource( 6 )
text = "settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit_Button" type="Button" parent="MenuContainer/Options_Menu"]
anchor_left = 0.3
anchor_top = 0.7
anchor_right = 0.7
anchor_bottom = 0.85
custom_fonts/font = ExtResource( 6 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Campaigns_Menu" type="Control" parent="MenuContainer"]
anchor_left = 2.0
anchor_right = 3.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="MenuContainer/Campaigns_Menu"]
anchor_bottom = 0.2
margin_left = 32.0
margin_top = 32.0
margin_right = 184.0
margin_bottom = -32.0
custom_fonts/font = SubResource( 1 )
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SectionTitleLabel" type="Label" parent="MenuContainer/Campaigns_Menu"]
anchor_left = 0.25
anchor_right = 0.75
anchor_bottom = 0.2
custom_fonts/font = SubResource( 1 )
text = "choose campaign"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CampaignScroll" type="ScrollContainer" parent="MenuContainer/Campaigns_Menu"]
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 32.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/Campaigns_Menu/CampaignScroll"]
margin_right = 928.0
margin_bottom = 864.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16

[node name="VSeparator" type="VSeparator" parent="MenuContainer/Campaigns_Menu"]
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 16.0
margin_right = -16.0
margin_bottom = -32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="MenuContainer/Campaigns_Menu"]
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.2
margin_left = 32.0
margin_right = -32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionLabel" type="Label" parent="MenuContainer/Campaigns_Menu"]
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.25
margin_left = 32.0
margin_right = -32.0
custom_fonts/font = ExtResource( 6 )
text = "Description"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="MenuContainer/Campaigns_Menu"]
anchor_left = 0.5
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 0.25
margin_left = 32.0
margin_right = -32.0
margin_bottom = 4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionScroll" type="ScrollContainer" parent="MenuContainer/Campaigns_Menu"]
anchor_left = 0.5
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 0.85
margin_left = 32.0
margin_top = 16.0
margin_right = -32.0
margin_bottom = -32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="MenuContainer/Campaigns_Menu/DescriptionScroll"]
margin_right = 896.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true

[node name="ChooseCampaignButton" type="Button" parent="MenuContainer/Campaigns_Menu"]
anchor_left = 0.5
anchor_top = 0.85
anchor_right = 0.75
anchor_bottom = 1.0
margin_left = 32.0
margin_bottom = -32.0
custom_fonts/font = ExtResource( 6 )
text = "Start / Load"

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="MenuContainer/Settings_Menu/BackButton" to="." method="move_to_menu" binds= [ 1 ]]
[connection signal="toggled" from="MenuContainer/Settings_Menu/Panel/Settings/FullscreenButton" to="MenuContainer/Settings_Menu" method="_on_FullscreenButton_toggled"]
[connection signal="toggled" from="MenuContainer/Settings_Menu/Panel/Settings/VsyncButton" to="MenuContainer/Settings_Menu" method="_on_VsyncButton_toggled"]
[connection signal="toggled" from="MenuContainer/Settings_Menu/Panel/Settings/RefreshRate/CheckBox" to="MenuContainer/Settings_Menu" method="_on_CheckBox_30fps_toggled"]
[connection signal="toggled" from="MenuContainer/Settings_Menu/Panel/Settings/RefreshRate/CheckBox2" to="MenuContainer/Settings_Menu" method="_on_CheckBox_60fps_toggled"]
[connection signal="pressed" from="MenuContainer/Options_Menu/Choose_Campaign_Button" to="." method="move_to_menu" binds= [ 2 ]]
[connection signal="pressed" from="MenuContainer/Options_Menu/Choose_Campaign_Button" to="." method="_on_campaign_chooser_button_pressed"]
[connection signal="pressed" from="MenuContainer/Options_Menu/Settings_Button" to="." method="move_to_menu" binds= [ 0 ]]
[connection signal="pressed" from="MenuContainer/Campaigns_Menu/BackButton" to="." method="move_to_menu" binds= [ 1 ]]
[connection signal="pressed" from="MenuContainer/Campaigns_Menu/ChooseCampaignButton" to="." method="_on_start_campaign_pressed"]
